force-app/main/default/objects/QuoteLineItem/fields/Free_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Free_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Shipping</label>
    <type>Checkbox</type>
</CustomField>