force-app/main/default/objects/QuoteLineItem/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if QLI is standard product without changes in the BOM structure</description>
    <inlineHelpText>Determines if QLI is standard product without changes in the BOM structure</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>