force-app/main/default/objects/QuoteLineItem/fields/IsShowInQuotePDF__c.field-meta.xml
<CustomField>
    <fullName>IsShowInQuotePDF__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show in QuotePDF</label>
    <type>Checkbox</type>
</CustomField>