force-app/main/default/objects/QuoteLineItem/fields/IsTransport__c.field-meta.xml
<CustomField>
    <fullName>IsTransport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if row is specific type of Transport.</description>
    <inlineHelpText>Determines if row is specific type of Transport.</inlineHelpText>
    <label>Transport</label>
    <type>Checkbox</type>
</CustomField>