force-app/main/default/objects/QuoteLineItem/fields/LineCost__c.field-meta.xml
<CustomField>
    <fullName>LineCost__c</fullName>
    <label>Line Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>