force-app/main/default/objects/QuoteLineItem/fields/OriginId__c.field-meta.xml
<CustomField>
    <fullName>OriginId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Id</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items (Origin Id)</relationshipLabel>
    <relationshipName>OriginQuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>