force-app/main/default/objects/QuoteLineItem/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <formula>TEXT(Product2.QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Unit Of Measure</label>
    <type>Text</type>
</CustomField>