force-app/main/default/objects/QuoteLineItem/fields/RelatedOptionalEquipment__c.field-meta.xml
<CustomField>
    <fullName>RelatedOptionalEquipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Optional Equipment</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items (Related Optional Equipment)</relationshipLabel>
    <relationshipName>QuoteLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>