force-app/main/default/objects/QuoteLineItem/fields/RowDiscount__c.field-meta.xml
<CustomField>
    <fullName>RowDiscount__c</fullName>
    <label>Row Discount</label>
    <precision>15</precision>
    <scale>12</scale>
    <type>Percent</type>
</CustomField>