force-app/main/default/objects/QuoteLineItem/fields/RowTotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>RowTotalDiscount__c</fullName>
    <label>Row Total Discount</label>
    <precision>15</precision>
    <scale>12</scale>
    <type>Percent</type>
</CustomField>