force-app/main/default/objects/QuoteLineItem/fields/RowTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>RowTotalPrice__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>