force-app/main/default/objects/QuoteLineItem/fields/TC_AssemblyCost__c.field-meta.xml
<CustomField>
    <fullName>TC_AssemblyCost__c</fullName>
    <description>Part of Transportation Cost. Always in CZK.</description>
    <inlineHelpText>Part of Transportation Cost. Always in CZK.</inlineHelpText>
    <label>Assembly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>