force-app/main/default/objects/QuoteLineItem/fields/TC_MaterialShippingCost__c.field-meta.xml
<CustomField>
    <fullName>TC_MaterialShippingCost__c</fullName>
    <description>Part of Transport Cost. Always in CZK.</description>
    <inlineHelpText>Part of Transport Cost. Always in CZK.</inlineHelpText>
    <label>Material Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>