force-app/main/default/objects/QuoteLineItem/validationRules/RowTotalDiscountHigherThan50.validationRule-meta.xml
<ValidationRule>
    <fullName>RowTotalDiscountHigherThan50</fullName>
    <active>false</active>
    <errorConditionFormula>Discount &gt; 0.50</errorConditionFormula>
    <errorMessage>Total Row Discount can not be higher than 50%</errorMessage>
</ValidationRule>